[package]
name = "lightningd"
version = "0.1.0"
edition = "2021"
description = "Utility to run a regtest lightningd process, useful in integration testing environment."
license = "MIT"
repository = "https://github.com/RCasatta/lightningd"
documentation = "https://docs.rs/lightningd/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clightningrpc = "0.2.0"
tempfile = "~3.2.0"
bitcoind = { git = "https://github.com/commerceblock/bitcoind", features=["22_0"] }
log = "0.4"

[dev-dependencies]
env_logger = "0.9"
